--- a/locales/en.json
+++ b/locales/en.json
@@ -164,11 +164,7 @@
       "underConstruction": "This service is currently under construction"
     },
     "yourCases": {
-      "newCases": "New cases",
-      "pendingCases": "Pending cases",
-      "advisingCases": "Advising cases",
-      "closedCases": "Closed cases",
-      "completedCases": "Completed cases",
+      "heading": "Your cases",
       "pageTitles": {
         "new": "New cases – {serviceName} – GOV.UK",
         "pending": "Pending cases – {serviceName} – GOV.UK",
