Adds button to access the feedback page

--- a/locales/en.json
+++ b/locales/en.json
@@ -196,6 +196,7 @@
       },
       "buttons": {
         "label": "Change status",
+        "giveOperatorFeedback": "Give operator feedback",
         "actions":{
           "advising": "Advising",
           "pending": "Pending",
