EL-2808: Implement case details tab (#491)
* If applied, this:
- updates the client details tab controller
- adds controller for case details tab
- creates new partial for case details tab
- updates the translation file
- adds in the `client problem` section
- adds in `operator diagnosis` & `operator notes`
- adds in the `providers notes` section
- updates the test suite to use new case header template and updates comments

--- a/locales/en.json
+++ b/locales/en.json
@@ -187,6 +187,18 @@
         "financialEligibility": "Financial eligibility",
         "history": "History"
       },
+      "caseDetailsSection": {
+        "clientProblemTitle": "Client problem from check if you can get legal aid",
+        "operatorDiagnosisTitle": "Operator scope diagnosis",
+        "operatorNotesTitle": "Notes from operator",
+        "providerNotesTitle": "Notes from provider",
+        "noteLabel": "Add a note",
+        "category": "category:",
+        "subCategory": "sub category:",
+        "tellUsMore": "tell us more about your problem:",
+        "financialAssessmentStatus": "financial assessment:",
+        "noNotes": "No notes to display"
+      },
       "clientDetails": {
         "heading": "Client details",
         "aboutClient": "About the client",
