If applied, this: - updates case header - conditionally shows client support needs card when `minicom` is true - updates test suite to look for correct header via CSS

--- a/locales/en.json
+++ b/locales/en.json
@@ -178,6 +178,7 @@
       "dateReceived": "Date received",
       "laaReference": "LAA reference",
       "notProvided": "Not provided",
+      "status": "Status",
       "tabs": {
         "clientDetails": "Client details",
         "caseDetails": "Case details",
@@ -205,6 +206,7 @@
       },
       "buttons": {
         "label": "Change status",
+        "splitThisCase": "Split this case",
         "giveOperatorFeedback": "Give operator feedback",
         "actions": {
           "advising": "Advising",
