If applied, this updates to use translation file

--- a/locales/en.json
+++ b/locales/en.json
@@ -179,6 +179,7 @@
       "laaReference": "LAA reference",
       "notProvided": "Not provided",
       "status": "Status",
+      "vulnerable": "Vulnerable",
       "tabs": {
         "clientDetails": "Client details",
         "caseDetails": "Case details",
