EL-2905: Update case header (#525)
* If applied, this:
- updates case header
- conditionally shows client support needs card when `minicom` is true
- updates test suite to look for correct header via CSS
- updates the tests the `assertCaseDetailsHeaderPresent` function

--- a/locales/en.json
+++ b/locales/en.json
@@ -178,6 +178,8 @@
       "dateReceived": "Date received",
       "laaReference": "LAA reference",
       "notProvided": "Not provided",
+      "status": "Status",
+      "urgent": "Urgent",
       "tabs": {
         "clientDetails": "Client details",
         "caseDetails": "Case details",
@@ -205,6 +207,7 @@
       },
       "buttons": {
         "label": "Change status",
+        "splitThisCase": "Split this case",
         "giveOperatorFeedback": "Give operator feedback",
         "actions": {
           "advising": "Advising",
