--- a/locales/en.json
+++ b/locales/en.json
@@ -269,6 +269,13 @@
       "doYouWantToGiveFeedback": {
         "pageTitle": "Do you want to give feedback about the operator service? – {caseReference} – {serviceName} – GOV.UK",
         "legend": "Do you want to give feedback about the operator service?"
+      }, 
+      "aboutNewCase": {
+        "pageTitle": "About the new case – {caseReference} – {serviceName} – GOV.UK",
+        "h2": "Split this case",
+        "infoText": "You must not open more than one case for a client unless the client has more than one separate and distinct legal problem. ",
+        "textEnd": " for more information.",
+        "radioLegend": "Who should the new case be assigned to?"
       }
     },
     "error": {
